Add script file changes needed for bosh-lite deployment of statsite.

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,5 +1,5 @@
 ---
-statsite/statsite:
-  object_id: 8eb30bff-2c03-4675-9ffa-a090e65d0c56
-  sha: 7206ffca11a231ff7cba0237756fc3f8c37c6554
-  size: 127836
+statsite.tgz:
+  object_id: 0a0039f5-456b-4945-ae89-36c33a1a9633
+  sha: 07ba3b20b49cbe82a63aa62037d7e510c7a29831
+  size: 4073997
