--- a/dev_releases/statsite/index.yml
+++ b/dev_releases/statsite/index.yml
@@ -2,4 +2,42 @@
 builds:
   5914418d-ce8c-46c9-941d-aaf189ebb9b3:
     version: 0+dev.1
+  8b5c0412-7477-4a07-b9ee-04464bfefa90:
+    version: 0+dev.2
+  6b50701d-a358-4ea7-bfcd-1241569067fe:
+    version: 0+dev.3
+  d28632eb-fee2-4284-b89d-3f63ad350857:
+    version: 0+dev.4
+  38681070-d6f5-410f-827c-ff624033a62c:
+    version: 0+dev.5
+  1aee420c-d880-48eb-b067-992495b516f4:
+    version: 0+dev.6
+  aaa06cc0-a232-43bc-8701-1907bd09cea8:
+    version: 0+dev.7
+  9ae49fce-1f90-4ac8-adc1-b2a3eee0a82c:
+    version: 0+dev.8
+  8a870dfe-cc39-4768-96dd-fe120076c269:
+    version: 0+dev.9
+  20b24e7d-5225-4458-b97a-b6d38e104b94:
+    version: 0+dev.10
+  6bb434ba-7705-4555-9ce7-f9a5c1860a3a:
+    version: 0+dev.11
+  19e85da7-50b0-4a09-a26a-ba066c1a37bb:
+    version: 0+dev.12
+  5874e28b-6101-496b-b453-a48760fc135c:
+    version: 0+dev.13
+  6b182b82-4147-4465-899b-d15fa62ff4fc:
+    version: 0+dev.14
+  2297c863-0918-4ba6-9802-da86b757079d:
+    version: 0+dev.15
+  3cdc3e0e-e059-4c56-8380-039b6e84a5b1:
+    version: 0+dev.16
+  27e6035d-d5d7-492f-b20a-7c7f97a9b84c:
+    version: 0+dev.17
+  a6332e92-052c-4d15-b14c-7d750b66ba32:
+    version: 0+dev.18
+  acb6f005-18a5-42c6-8290-444d3ff40277:
+    version: 0+dev.19
+  dc0fc12f-cd93-46b0-829e-7d94aedfaaec:
+    version: 0+dev.20
 format-version: '2'
