--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,5 +1,5 @@
 ---
-statsite.tgz:
-  object_id: 0a0039f5-456b-4945-ae89-36c33a1a9633
-  sha: 07ba3b20b49cbe82a63aa62037d7e510c7a29831
-  size: 4073997
+statsite/statsite.tgz:
+  object_id: e17e0cb2-fb45-4946-a32c-805804f5de40
+  sha: ade753487d6ae26349b2688058a75632528f4d2a
+  size: 4105788
