--- a/config/dev.yml
+++ b/config/dev.yml
@@ -1,3 +1,3 @@
 ---
 dev_name: statsite
-latest_release_filename: /Users/212569521/statsite-boshrelease/dev_releases/statsite/statsite-0+dev.20.yml
+latest_release_filename: "/Users/212569521/statsite-boshrelease/dev_releases/statsite/statsite-0+dev.47.yml"
