newrelic sink configuration changes.

--- a/dev_releases/statsite/index.yml
+++ b/dev_releases/statsite/index.yml
@@ -94,4 +94,20 @@ builds:
     version: 0+dev.46
   3e59c32d-2f22-4301-9b24-199f45bd6268:
     version: 0+dev.47
+  f0be67da-c0a8-4d71-b964-675280b3cbac:
+    version: 0+dev.48
+  7f2a21a6-7188-493d-ad87-0ca0f8d51317:
+    version: 0+dev.49
+  b793cc2b-0e3f-4c8c-be7c-ffdda7d3d9b9:
+    version: 0+dev.50
+  28cad5fb-fdbd-42bd-9aa3-bbfd4afca622:
+    version: 0+dev.51
+  19bc6a1c-93e6-4594-a593-0cf30758de4a:
+    version: 0+dev.52
+  49901a33-2b83-436a-a347-a72f053c41a3:
+    version: 0+dev.53
+  52d3521d-4d07-4449-bf7a-536567b3eeae:
+    version: 0+dev.54
+  9faeb633-a1a5-4548-ad72-8948c82b9abc:
+    version: 0+dev.55
 format-version: '2'
