Add configuration properties and prefix for Statsite.

--- a/dev_releases/statsite/index.yml
+++ b/dev_releases/statsite/index.yml
@@ -120,4 +120,20 @@ builds:
     version: 0+dev.59
   7c74af12-6400-4b6c-988e-460133159b28:
     version: 0+dev.60
+  4f40ad06-0e85-4fc7-b778-94abbde79f69:
+    version: 0+dev.61
+  2745e013-4618-40c5-b7c6-66f9c22faf9d:
+    version: 0+dev.62
+  2f67829c-8ef2-42cf-bcf3-855c46ff5c2c:
+    version: 0+dev.63
+  809608e3-97c5-4eb3-8740-3bb358acf964:
+    version: 0+dev.64
+  2080fc3b-25ec-4c9d-aa04-4a9fc84ff1b6:
+    version: 0+dev.65
+  bc49f878-4815-4a84-8b3e-218909515c44:
+    version: 0+dev.66
+  2b13e699-7a1f-4aea-a6da-1f499841b781:
+    version: 0+dev.67
+  f4d3d2ca-f727-4e8b-9c4e-01d2d2f695fd:
+    version: 0+dev.68
 format-version: '2'
