--- a/manifests/statsite-boshlite-manifest.yml
+++ b/manifests/statsite-boshlite-manifest.yml
@@ -48,6 +48,15 @@ networks:
     - 10.244.15.2 - 10.244.15.20
   type: manual
 properties:
+  statsite:
+    global_prefix: bosh_lite_
+    port: 8125
+    udp_port: 8125
+    log_level: INFO
+    log_facility: local0
+    flush_interval: 60
+    timer_eps: 0.01
+    set_eps: 0.02
   newrelic:
     account_id: 1319857
     api_key: v__M0JaPMhJCD-D_rwt_O_VjZvVQb0ix
