Add bind address to 127.0.0.1 in statsite conf

--- a/jobs/statsite/templates/config/statsite.conf
+++ b/jobs/statsite/templates/config/statsite.conf
@@ -1,4 +1,5 @@
 [statsite]
+bind_address = STATSITE_BIND_ADDRESS
 port = STATSITE_TCP_PORT
 udp_port = STATSITE_UDP_PORT
 log_level = STATSITE_LOG_LEVEL
@@ -8,4 +9,3 @@ timer_eps = STATSITE_TIMER_EPS
 set_eps = STATSITE_SET_EPS
 global_prefix = STATSITE_GLOBAL_PREFIX
 stream_cmd=python3 /var/vcap/jobs/statsite/helpers/statsite-newrelic-sink.py
-
